# mlops_tech_test_arvind

./: .gitignore  Readme.md  pyproject.toml
config/: config.py
output/: .gitignore  results.csv
pre_processing/: data_pre_processing.py
service/: logger.py
tasks/: task_1.py  task_2.py
tests/unit_tests/: conftest.py  test_data.csv  test_predictions.py
unit_tests/: test_predictions.py
