[tool.poetry]
name = "mlops_tech_test_arvind"
version = "0.1.0"
description = ""
authors = ["Arvind Menon <arvind.menon@virginmediao2.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
fsspec = "^2023.6.0"
gcsfs = "^2023.6.0"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
